--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.2.0",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "tabler-icons-react": "^1.56.0",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
