--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-router": "^6.7.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-use-websocket": "^4.3.1",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
