--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.3.1",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
