--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.4",
     "dayjs": "^1.11.7",
     "firebase": "^9.19.1",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.7.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
