--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
