--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "@mantine/dates": "^6.0.7",
     "@mantine/form": "^6.0.7",
     "@mantine/hooks": "^6.0.7",
+    "@types/leaflet": "^1.9.3",
     "axios": "^1.2.4",
     "dayjs": "^1.11.7",
     "firebase": "^9.19.1",
+    "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
